--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly 'org.projectlombok:lombok:1.18.16'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot
     implementation 'org.springframework.boot:spring-boot:2.3.1.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -32,6 +34,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
 
     implementation 'org.mapstruct:mapstruct:1.3.1.Final'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
 
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
